--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/aocattleya/webpack-my-cheatsheet-ja#readme",
   "devDependencies": {
+    "live-server": "^1.2.1",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.10"
   }
