update: npm run startで起動できる様に変更

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "## npm init -y",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "webpack-dev-server --open"
   },
   "repository": {
     "type": "git",
